@@ -10,5 +10,6 @@ sunuo (0.1.0) unstable; urgency=low
     "argument too long" limitation on most POSIX systems
   * moved the World.Load() call from ScriptCompiler to Main
   * ScriptCompiler.m_Assemblies converted to ArrayList
+  * removed method TileMatrix.Force(), which was good for nothing
 
  --
